--- a/Section - 26 - NextJS/starting-project/package.json
+++ b/Section - 26 - NextJS/starting-project/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "better-sqlite3": "^11.9.1",
-    "next": "^15.0.0",
+    "critters": "^0.0.23",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "slugify": "^1.6.6",
